m2k_app-jee7/myproject/deploy/yamls/petstoreee7-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: petstoreee7
  name: petstoreee7
spec:
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: petstoreee7
  type: ClusterIP
status:
  loadBalancer: {}
