m2k_app-jee7/myproject/deploy/yamls/myproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: myproject
  name: myproject
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: petstoreee7
                port:
                  name: port-8080
            path: /petstoreee7
            pathType: Prefix
status:
  loadBalancer: {}
